--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
  - "node"
+before_script:
+  - cp .env.example .env
 after_success:
   - npm run coverage
   - cat ./coverage/lcov.info | coveralls
