--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ node_js:
  - "node"
 before_script:
   - cp .env.example .env
+script:
+  - yarn run coverage
 after_success:
-  - npm run coverage
   - cat ./coverage/lcov.info | coveralls
