--- a/package.json
+++ b/package.json
@@ -13,32 +13,31 @@
     "seed": "yarn run sequelize db:seed:all"
   },
   "dependencies": {
-    "blipp": "^3.0.0",
-    "boom": "^7.2.0",
-    "dotenv": "^5.0.1",
-    "hapi": "^17.2.2",
-    "hapi-auth-token": "^2.0.0",
-    "hapi-swagger": "^9.1.1",
-    "inert": "^5.1.0",
-    "joi": "^13.1.2",
-    "jsonwebtoken": "^8.2.0",
-    "vision": "^5.3.2"
+    "@hapi/boom": "^10.0.1",
+    "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
+    "@hapi/vision": "^7.0.3",
+    "blipp": "^4.0.2",
+    "dotenv": "^16.3.1",
+    "hapi-auth-token": "^3.0.0",
+    "hapi-swagger": "^17.1.0",
+    "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1"
   },
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "chai": "^4.1.2",
-    "coveralls": "^3.0.0",
-    "eslint": "^4.15.0",
-    "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-mocha": "^4.11.0",
-    "mocha": "^5.0.0",
-    "npm": "^5.6.0",
-    "nyc": "^11.4.1",
-    "sinon": "^4.1.6",
-    "sinon-chai": "^2.14.0"
+    "babel-preset-env": "^1.7.0",
+    "chai": "^4.3.7",
+    "coveralls": "^3.1.1",
+    "eslint": "^8.44.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-mocha": "^10.1.0",
+    "mocha": "^10.2.0",
+    "nyc": "^15.1.0",
+    "sinon": "^15.2.0",
+    "sinon-chai": "^3.7.0"
   }
 }
